# pathon

./: .gitignore  model.onnx  model.txt  mylist.txt  record_replays.py  train.py  train1.py  train_2M.txt  train_3M.txt  train_8M_I.txt
backend/: .gitignore  Cargo.toml
backend/src/: env.rs  flow_field.rs  lib.rs  main.rs  obstacles.rs
backend/src/.ipynb_checkpoints/: main-checkpoint.rs
frontend/: package-lock.json  replay.html  server.py
frontend/src/: App.svelte  ReplayApp.svelte  app.txt  main.js  replay.js
