[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
futures = "0.3"
pyo3 = { version = "0.28.3", features = ["extension-module"] }
ndarray = "0.17.2"
tract-onnx = "0.22.1"

[lib]
name = "pathon_env"
crate-type = ["cdylib", "rlib"]

